# WebExtratorMCP

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
core/: __init__.py  client.py  config.py  exceptions.py  oauth.py  server.py  types.py
deploy/production/: deployment.yaml  ingress.yaml  service.yaml
prompts/: __init__.py  webextrator_prompts.py
tests/: __init__.py  conftest.py  test_smoke.py
tools/: __init__.py  extract_tools.py  info_tools.py  task_tools.py
